Added example runs to the vignette

--- a/vignettes/overview.Rmd
+++ b/vignettes/overview.Rmd
@@ -140,9 +140,189 @@ To facilitate the user in using the rotsee package, several helper functions hav
 For this we refer you to the [helpers vignette](helpers.html).
 
 ## 7. Example runs
+Here are several examples of how the rotsee package can be applied.
 
-TO DO
+### 7.1 Simple run
+This first example
 
+```{r example simple, echo = FALSE}
+# define soil properties
+soil <- data.table(
+    B_C_ST03 = 210,
+    A_CLAY_MI = 18,
+    A_DENSITY_SA = 1.4
+  )
+
+# define parms to set simulation period
+parms <- list(
+  start_date = "2022-01-01",
+  end_date = "2032-01-01"
+)
+
+# Run the model
+results <- rc_sim(
+  soil_properties = soil,
+  rothc_parms = parms
+)
+
+# plot results
+ggplot(data = results)+
+  geom_line(aes(x = time, y =A_SOM_LOI))+
+  labs(x = "year", y = "OM [%]")
+
+
+```
+
+This is of course a rather boring example, but does show what limited data is needed to
+run the model, and thus provide significant user flexibility. In this case there are not
+carbon inputs, and hence pools are continually decreasing.
+
+### 7.2 Complete run
+This example includes a simulation of 100 years in which extensive inputs are applied
+
+```{r example complete, echo=FALSE, fig.width = 6, fig.height=5, eval=FALSE}
+
+
+# Set crop rotation plan
+crops <- data.table(
+    B_LU_START = c("2022-04-01", "2023-04-01"),
+    B_LU_END = c("2022-10-01", "2023-10-01"),
+    B_LU = c("nl_308", "nl_308"),
+    B_LU_NAME = c("erwten (droog te oogsten)", "erwten (droog te oogsten)" ),
+    B_LU_HC = c(0.32, 0.32),
+    B_C_OF_INPUT = c(1500, 1500)
+    )
+
+crops <- rc_extend_crops(crops, start_date = "2022-01-01", simyears = 100)
+
+# set amendment plan
+amendment <- data.table(
+    P_ID = c(1, 1),
+    P_NAME = c('cattle_slurry', 'cattle_slurry'),
+    P_DOSE = c(63300, 63300),
+    P_HC = c(0.7,0.7),
+    P_C_OF = c(35, 35),
+    P_DATE_FERTILIZATION = c("2022-05-01", "2023-05-01"))
+
+amendment <- rc_extend_amendments(amendment, start_date = "2022-01-01", simyears = 100)
+
+# define weather
+weather <- data.table(year = rep(2022:2040, each = 12),
+                        month = rep(1:12, 19),
+                        W_TEMP_MEAN_MONTH = rep(c(3.6,3.9,6.5,9.8,13.4,16.2,18.3,17.9,14.7,10.9,7,4.2), 19),
+                        W_PREC_SUM_MONTH = rep(c(70.8, 63.1, 57.8, 41.6, 59.3, 70.5, 85.2, 83.6, 77.9, 81.1, 80.0, 83.8),19),
+                        W_ET_REF_MONTH = c(8.5, 15.5, 35.3, 62.4, 87.3, 93.3, 98.3, 82.7, 51.7, 28.0, 11.3,  6.5),
+                        W_ET_ACT_MONTH = NA_real_,
+                        W_ET_REFACT = rep(0.75, 12))
+
+# define soil properties
+soil <- data.table(
+    B_C_ST03 = 210,
+    A_CLAY_MI = 18,
+    A_DENSITY_SA = 1.4
+  )
+
+# define parameters
+parms <- list(dec_rates = c(k1 = 10, k2 = 0.3, k3 = 0.66, k4 = 0.02),
+                      c_fractions = c(fr_IOM = 0.049, fr_DPM = 0.015, fr_RPM = 0.125, fr_BIO = 0.015),
+                      initialize = TRUE,
+                      unit = "A_SOM_LOI",
+                      method = "adams",
+                      poutput = "year",
+                      start_date = "2022-04-01",
+                      end_date = "2122-04-01")
+
+# Run the model
+results <- rc_sim(
+  soil_properties = soil,
+  rothc_rotation = crops,
+  rothc_amendment = amendment,
+  rothc_parms = parms,
+  weather = weather
+)
+
+# plot results
+ggplot(data = results)+
+  geom_line(aes(x = time, y =A_SOM_LOI))+
+  labs(x = "year", y = "OM [%]")
+
+```
+  
+
+
+
+### 7.3 multicore calculations
+In case of multiple plots, rotsee facilitates the option to perform multicore calculations and thereby greatly speed
+the calculations. This example shows how such a calculation can be conducted.
+
+```{r example multicore}
+# define soil properties of three fields
+soil <- data.table(
+    ID = c('high', 'low', 'mid'),
+    A_C_OF = rep(50,3),
+    B_C_ST03 = rep(210,3),
+    A_CLAY_MI = rep(18,3),
+    A_DENSITY_SA = rep(1.4,3)
+  )
+
+  # Define crop rotation on each field
+  crops <- data.table(
+    ID = rep(c('high', 'low', 'mid'),2),
+    B_LU_START = rep(c("2022-04-01", "2023-04-01"),each=3),
+    B_LU_END = rep(c("2022-10-01", "2023-10-01"),each=3),
+    B_LU = rep(c("nl_308", "nl_308"),each = 3),
+    B_LU_NAME = rep(c("erwten (droog te oogsten)", "erwten (droog te oogsten)" ),each =3),
+    B_LU_HC = rep(0.32, 6),
+    B_C_OF_INPUT = rep(1500, 6)
+  )
+  
+  # Define amendment on each field
+  amendment <- data.table(
+    ID = rep(c('high', 'low', 'mid'),2),
+    P_ID = rep(1, 6),
+    P_NAME = rep('cattle_slurry', 6),
+    P_DOSE = rep(c(100000, 25000, 70000), 2),
+    P_HC = rep(0.7,6),
+    P_C_OF = rep(35, 6),
+    P_DATE_FERTILIZATION = rep(c("2022-05-01", "2023-05-01"),each=3)
+  )
+ 
+  # define parameters
+  parms <- list(dec_rates = c(k1 = 10, k2 = 0.3, k3 = 0.66, k4 = 0.02),
+                c_fractions = c(fr_IOM = 0.049, fr_DPM = 0.015, fr_RPM = 0.125, fr_BIO = 0.015),
+                initialize = TRUE,
+                unit = "A_SOM_LOI",
+                method = "adams",
+                poutput = "year",
+                start_date = "2022-04-01",
+                end_date = "2040-10-01")
+
+  # define weather
+weather <- data.table(year = rep(2022:2040, each = 12),
+                        month = rep(1:12, 19),
+                        W_TEMP_MEAN_MONTH = rep(c(3.6,3.9,6.5,9.8,13.4,16.2,18.3,17.9,14.7,10.9,7,4.2), 19),
+                        W_PREC_SUM_MONTH = rep(c(70.8, 63.1, 57.8, 41.6, 59.3, 70.5, 85.2, 83.6, 77.9, 81.1, 80.0, 83.8),19),
+                        W_ET_REF_MONTH = c(8.5, 15.5, 35.3, 62.4, 87.3, 93.3, 98.3, 82.7, 51.7, 28.0, 11.3,  6.5),
+                        W_ET_ACT_MONTH = NA_real_,
+                        W_ET_REFACT = rep(0.75, 12))
+  
+  # Run multicore calculation
+  result <- rc_sim_multi(soil_properties = soil,
+                         parms = parms,
+                         rotation = crops,
+                         weather = weather,
+                         amendment = amendment,
+                         final = FALSE,
+                         strategy = 'multisession')
+  
+  # plot result
+  ggplot(data = result)+
+  geom_line(aes(x = time, y =A_SOM_LOI, colour = ID))+
+  labs(x = "year", y = "OM [%]")
+  
+```
+
+It should be noted that in the current implementation multicore calculations require significantly more input.
 ## 8. references
 Coleman, K., & Jenkinson, D. S. (1996). RothC-26.3-A Model for the turnover of carbon in soil. In Evaluation of soil organic matter models: Using existing long-term datasets (pp. 237-246). Berlin, Heidelberg: Springer Berlin Heidelberg.
 
