--- a/vignettes/overview.Rmd
+++ b/vignettes/overview.Rmd
@@ -260,13 +260,17 @@ ggplot(data = results)+
 
 
 ### 7.3 multicore calculations
-In case of multiple plots, rotsee facilitates the option to perform multicore calculations and thereby greatly speed
-the calculations. This example shows how such a calculation can be conducted.
+In case of multiple plots, multicore calculations can be conducted to speed up the calculation
+using `rc_sim_multi`. This requires an additional ID column for soil, crop, and amendment
+data to represent the different fields/scenaro's/ This example shows multicore calculations with similar
+crop growth yet with three different rates of amendment application.
 
-```{r example multicore}
+**Note: the current iteration requires also additional inputs listed above to run correctly**
+
+```{r example multicore, out.width = '70%'}
 # define soil properties of three fields
 soil <- data.table(
-    ID = c('high', 'low', 'mid'),
+    ID = c('low', 'mid', 'high'),
     B_C_ST03 = rep(50,3),
     A_CLAY_MI = rep(18,3),
     A_DENSITY_SA = rep(1.4,3)
@@ -274,26 +278,26 @@ soil <- data.table(
 
   # Define crop rotation on each field
   crops <- data.table(
-    ID = rep(c('high', 'low', 'mid'),2),
+    ID = rep(c('low', 'mid', 'high'),2),
     B_LU_START = rep(c("2022-04-01", "2023-04-01"),each=3),
     B_LU_END = rep(c("2022-10-01", "2023-10-01"),each=3),
-    B_LU = rep(c("nl_308", "nl_308"),each = 3),
-    B_LU_NAME = rep(c("erwten (droog te oogsten)", "erwten (droog te oogsten)" ),each =3),
     B_LU_HC = rep(0.32, 6),
-    B_C_OF_INPUT = rep(1500, 6)
+    B_C_OF_INPUT = rep(2500, 6)
   )
+  
+  crops <- rc_extend_crops(crops = crops, start_date = "2022-01-01", simyears = 100)
   
   # Define amendment on each field
   amendment <- data.table(
-    ID = rep(c('high', 'low', 'mid'),2),
-    P_ID = rep(1, 6),
+    ID = rep(c('low', 'mid', 'high'),2),
     P_NAME = rep('cattle_slurry', 6),
-    P_DOSE = rep(c(100000, 25000, 70000), 2),
+    B_C_OF_INPUT = rep(c(1000, 3000, 5000), each = 2),
     P_HC = rep(0.7,6),
-    P_C_OF = rep(35, 6),
     P_DATE_FERTILIZATION = rep(c("2022-05-01", "2023-05-01"),each=3)
   )
  
+  amendment <- rc_extend_amendments(amendments = amendment, start_date = "2022-01-01", simyears = 100)
+  
   # define parameters
   parms <- list(dec_rates = c(k1 = 10, k2 = 0.3, k3 = 0.66, k4 = 0.02),
                 c_fractions = c(fr_IOM = 0.049, fr_DPM = 0.015, fr_RPM = 0.125, fr_BIO = 0.015),
@@ -302,13 +306,12 @@ soil <- data.table(
                 method = "adams",
                 poutput = "year",
                 start_date = "2022-04-01",
-                end_date = "2040-10-01")
+                end_date = "2122-04-01")
 
   # define weather
-weather <- data.table(year = rep(2022:2040, each = 12),
-                        month = rep(1:12, 19),
-                        W_TEMP_MEAN_MONTH = rep(c(3.6,3.9,6.5,9.8,13.4,16.2,18.3,17.9,14.7,10.9,7,4.2), 19),
-                        W_PREC_SUM_MONTH = rep(c(70.8, 63.1, 57.8, 41.6, 59.3, 70.5, 85.2, 83.6, 77.9, 81.1, 80.0, 83.8),19),
+  weather <- data.table(month = c(1:12),
+                        W_TEMP_MEAN_MONTH = c(3.6,3.9,6.5,9.8,13.4,16.2,18.3,17.9,14.7,10.9,7,4.2),
+                        W_PREC_SUM_MONTH = c(70.8, 63.1, 57.8, 41.6, 59.3, 70.5, 85.2, 83.6, 77.9, 81.1, 80.0, 83.8),
                         W_ET_REF_MONTH = c(8.5, 15.5, 35.3, 62.4, 87.3, 93.3, 98.3, 82.7, 51.7, 28.0, 11.3,  6.5),
                         W_ET_ACT_MONTH = NA_real_,
                         W_ET_REFACT = rep(0.75, 12))
@@ -324,13 +327,12 @@ weather <- data.table(year = rep(2022:2040, each = 12),
   
   # plot result
   ggplot(data = result)+
-  geom_line(aes(x = time, y =A_SOM_LOI, colour = ID))+
+  geom_line(aes(x = time, y =A_SOM_LOI, linetype = ID))+
   labs(x = "year", y = "OM [%]") +
     theme_bw()
   
 ```
 
-It should be noted that in the current implementation multicore calculations require significantly more input.
 
 ## 8. references
 Coleman, K., & Jenkinson, D. S. (1996). RothC-26.3-A Model for the turnover of carbon in soil. In Evaluation of soil organic matter models: Using existing long-term datasets (pp. 237-246). Berlin, Heidelberg: Springer Berlin Heidelberg.
